# hdx-scraper-faostat

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-requirements.txt  faostat.py  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  run_env  test-requirements.txt
.github/workflows/: build.yml  publish.yaml  run-python-script.yaml  run-python-tests.yaml
config/: FAOSTAT_CountryGroups.csv  hdx_dataset_static.yaml  hdx_dataset_static.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
src/hdx/scraper/faostat/: __main__.py  pipeline.py
src/hdx/scraper/faostat/config/: project_configuration.yaml
tests/: test_faostat.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: Suite of Food Security Indicators_AFG.csv  qc_Suite of Food Security Indicators_AFG.csv
